# Modo-Examples

./: LICENSE  README.md
modo/: CMakeLists.txt  CMakePresets.json
modo/cmake/: utils.cmake
modo/cmake/templates/: index.cfg.in  tool.cfg.in
modo/src/ModelingFalloff/: CMakeLists.txt  PartFalloff.cxx  PartFalloff.hxx  Properties.cfg
